--- a/form.css
+++ b/form.css
@@ -1,27 +1,62 @@
-label {
-  margin-right: .3em;
-  width: 8em;
-  display: inline-block;
-  text-align: right;
+body {
+  font-family: sans-serif;
+}
+
+form {
+  width: 500px;
+  margin: 20px;
+}
+
+fieldset {
+  border: 1px solid #aaa;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+legend {
+  font-weight: bold;
+  padding: 0 5px;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
 }
 
 #formcol1 li {
   list-style: none;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.7em;
+}
+
+label {
+  display: inline-block;
+  width: 100px;
+  text-align: right;
+  margin-right: 10px;
+}
+
+input[type="text"],
+input[type="email"] {
+  padding: 2px 5px;
 }
 
 #formcol1 input.reqfield {
   background: #FF9;
 }
 
-select:focus,
-select:active,
-input:focus,
-input:active,
-input:focus + label,
-input:active + label,
-label[for]:focus,
-label[for]:active {
-  color: #FFF !important;
-  background-color: #BB3D2F !important;
+input[type="radio"] {
+  margin-left: 10px;
+  margin-right: 4px;
+}
+
+button {
+  padding: 5px 10px;
+  font-size: 14px;
+  background-color: #e0e0e0;
+  border: 1px solid #999;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #ccc;
 }
